# bioinfo_tools

./: README.md
bs_seq/: Methylated_RNA_sites.mRNA.xlsx
bs_seq/.ipynb_checkpoints/: syn_id2locus-checkpoint.csv
bs_seq/COG/: anno_list.csv  anno_list.txt  annotation26.csv  cog_count.ipynb  cog_count.py  cog_count.txt
bs_seq/id2locus/: id2locus.ipynb
bs_seq/kegg/: syn_pathwayResult.xls
circos/: circos.md  syn.conf
genbank/: 2022-11-07_distribution_of_gen_density_per_chromsome.html  project_3_addition_on_class.ipynb  tmp_test.ipynb
gtftools/: gff2gtf  pus7_dependent_pseudo_u.table  rel_to_exact.py  rel_to_exact_zhn.py  successful_query_table.csv  test.py
kegg/: locus_convert.csv
make_window_and_calculate_CG/: 01.bed_intersect.ipynb  bed_intersect.py  class_bed_intersect.ipynb  make_window_and_calculate_CG.ipynb  parse_test.py
mybamtools/MyBamTools/: pyproject.toml  test_out.tsv
mybamtools/MyBamTools/data/: CTCF_rep1.sort.chr21.bed  K562-ATACSeq-rep1.ENCFF534DCE_chr21.bam.bai  bed_count_BAM.py
mybamtools/MyBamTools/src/bamtools/: __init__.py  _cli.py  _counter.py  _error.py  _logging.py  _spliter.py  count_use_bed.py
pysam_and_BAM/: pysam_and_BAM.ipynb
rna_seq/: Cluster_PCA_tSNE_MDS.R  RNASeq.md  rna_quantification.R  sike_in_normalization_enrichment_analysis.R
signal_enrichment/: ATACSeq_TSS_signal_calculation.ipynb  ChIPSeq_signal_calculation.ipynb  hg38_refseq_gene_TSS_TES_protein_only.bed  make_gene_TSS_TES_bed.ipynb  query_BAM_with_ref_point.py  signal_ATACSeq.RefPoint.csv  signal_H3K36me3.ScaleRegion.csv  signal_H3K4me3.ScaleRegion.csv
(+48 files in other folders)
