[tool.poetry]
name = "bamtools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bamtools", from = "src"}]

[tool.poetry.scripts]
bamtools="bamtools._cli:main"

[tool.poetry.dependencies]
python = "^3.8"
pysam = "^0.21.0"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
